# cli_prompt_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: example1.rs  example2.rs
src/: cli_prompt_error.rs  color.rs  lib.rs  mock_term.rs
