[package]
name = "cli_prompts_rs"
version = "0.2.0"
edition = "2021"
description = "Easily build beautiful command-line apps"
license = "MIT"
repository = "https://github.com/probaku1234/cli_prompt_rs"
readme = "README.md"
authors = ["Yun Seob Lee <fhzotxldj@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock-term = []

[dependencies]
supports-unicode = "2.0.0"
console = "0.15.7"
colored = "2.0.4"
